adds education and work experience info using lists

--- a/html/personal-website/index.html
+++ b/html/personal-website/index.html
@@ -11,7 +11,50 @@
     <p><em>Graduate Student<br><a href="https://sjsu.edu/">San Jose State University</a><br>San Jose, CA 95192</em></p>
     <p>I am a graduate student at San Jose State pursuing MS in Software Engineering, with prior work experience as a software developer and a Bachelor's in Computer Science.</p>
     <hr>
+    <h3>Education</h3>
+    <ul>
+        <li>
+            <strong>MS: Software Engineering</strong> - <em>San Jose State University, CA, USA</em>
+            <ul>
+                <li>3.78/4.0</li>
+                <li>Jan 2022 to Dec 2023 (Pursuing Currently)</li>
+            </ul>
+        </li>
+        <li>
+            <strong>B.Tech: Computer Science & Engineering</strong> - <em>BPPIMT, West Bengal, India</em>
+            <ul>
+                <li>7.85/10.0</li>
+                <li>Jul 2014 to Aug 2018 (Pursuing Currently)</li>
+            </ul>
+        </li>
+    </ul>
     <h3>Work Experience</h3>
+    <ul>
+        <li>
+            <strong>Enparadigm Performance Solutions</strong>, <em>Bangalore, Karnataka, India</em>
+            <ul>
+                <li>Software Developer, Apr 2021 to Jan 2022</li>
+                <li>Collaborate with a team of mobile developers, back-end engineers, and designers to define, design, and ship new features</li>
+                <li>Identify & correct bottlenecks and bugs in current and legacy code</li>
+            </ul>
+        </li>
+        <li>
+            <strong>ISSC</strong>, <em>Delhi, India</em>
+            <ul>
+                <li>Software Developer, Jul 2020 to Dec 2020</li>
+                <li>Undertake projects and roles aimed at improving the IT infrastructure of the company</li>
+                <li>Roles varied from Web Dev, Cross-platform Mobile Dev, Automation Engineer, and UI/UX Designer</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Optimize IT Systems</strong>, <em>Kolkata, West Bengal, India</em>
+            <ul>
+                <li>Jr. Software Developer, Jan 2019 to Jan 2020</li>
+                <li>Continuously discover, evaluate, and implement new technologies to maximize development efficiency</li>
+                <li>Key member of the R&D team focused on creating POCs and integrating emerging technologies like Artificial Intelligence, Computer Vision, and Deep Learning</li>
+            </ul>
+        </li>
+    </ul>
 </body>
 
 </html>
