--- a/html/personal-website/index.html
+++ b/html/personal-website/index.html
@@ -7,9 +7,10 @@
 </head>
 
 <body>
+    <img src="./assets/ashutosh.png" alt="profile picture" width="200" height="200">
     <h1>Ashutosh Ojha</h1>
     <p><em>Graduate Student<br><a href="https://sjsu.edu/">San Jose State University</a><br>San Jose, CA 95192</em></p>
-    <p>I am a graduate student at San Jose State pursuing MS in Software Engineering, with prior work experience as a software developer and a Bachelor's in Computer Science.</p>
+    <p>I am a graduate student at San Jose State University pursuing MS in Software Engineering, with prior work experience as a software developer and a Bachelor's in Computer Science.</p>
     <hr>
     <h3>Education</h3>
     <ul>
