--- a/html/personal-website/contact.html
+++ b/html/personal-website/contact.html
@@ -9,10 +9,14 @@
         <p>126 N Capitol Ave, Berryessa, San Jose, CA 95132</p>
         <p>+1 (669) 499-6135</p>
         <p>ashutosh.ojha2009@gmail.com</p>
-
-        <form class="" action="index.html" method="post">
+        <hr>
+        <form action="mailto:ashutosh.ojha2009@gmail.com" method="post" enctype="text/plain">
             <label for="">Your Name:</label>
-            <input type="text" name="" value="">
+            <input type="text" name="yourName" value=""><br>
+            <label for="">Your Email:</label>
+            <input type="email" name="yourEmail" value=""><br>
+            <label for="">Your Message:</label><br>
+            <textarea name="yourMessage" cols="30" rows="10"></textarea><br>
             <input type="submit" name="">
         </form>
     </body>
