--- a/css/personal-website/index.html
+++ b/css/personal-website/index.html
@@ -4,13 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <title>Ash's Portfolio</title>
+
+    <style>
+
+        body {
+            background-color: #EAF6F6;
+        }
+
+        hr {
+            border-style: none;
+            border-top-style: dotted;
+            border-color: grey;
+            border-width: 5px;
+            width: 5%;
+        }
+
+        img {
+            height: 200px;
+            width: 200px;
+        }
+
+    </style>
+
 </head>
 
 <body>
     <table cellspacing="20">
         <tr>
             <td>
-                <img src="./assets/ashutosh.png" alt="profile picture" width="200" height="200">
+                <img src="./assets/ashutosh.png" alt="profile picture">
             </td>
             <td>
                 <h1>Ashutosh Ojha</h1>
