moves internal css to external css file: styles.css

--- a/css/personal-website/index.html
+++ b/css/personal-website/index.html
@@ -4,28 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Ash's Portfolio</title>
-
-    <style>
-
-        body {
-            background-color: #EAF6F6;
-        }
-
-        hr {
-            border-style: none;
-            border-top-style: dotted;
-            border-color: grey;
-            border-width: 5px;
-            width: 5%;
-        }
-
-        img {
-            height: 200px;
-            width: 200px;
-        }
-
-    </style>
-
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
