--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Ashutosh Ojha</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
     
