positions content on the portfolio index.html

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,6 +7,18 @@
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
-    
+    <div class="top-container">
+        <img class="top-cloud" src="assets/cloud.png" alt="cloud-img">
+        <h1>I'm Ashutosh.</h1>
+        <p>a graduate student.</p>
+        <img class="bottom-cloud" src="assets/cloud.png" alt="cloud-img">
+        <img src="assets/mountain.png" alt="mountain-img">
+    </div>
+    <div class="middle-container">
+
+    </div>
+    <div class="bottom-container">
+
+    </div>
 </body>
 </html>
