styles font for the portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -14,7 +14,7 @@
     <div class="top-container">
         <img class="top-cloud" src="assets/cloud.png" alt="cloud-img">
         <h1>I'm Ashutosh.</h1>
-        <p>a graduate student.</p>
+        <h2>a <span class="pro">pro</span>grammer.</h2>
         <img class="bottom-cloud" src="assets/cloud.png" alt="cloud-img">
         <img src="assets/mountain.png" alt="mountain-img">
     </div>
@@ -23,7 +23,7 @@
         <div class="profile">
             <img class = "profile-img" src="./assets/ashutosh.png" alt="profile-img">
             <h2>Hello.</h2>
-            <p>I am a student at San Jose State University pursuing MS in Software Engineering.</p>
+            <p>I am currently a student at San Jose State University pursuing MS in Software Engineering.</p>
         </div>
         <hr>
         <div class="skills">
