--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -29,14 +29,18 @@
         <div class="skills">
             <h2>My Skills.</h2>
             <div class="skill-row">
-                <img class="" src="./assets/computer.png" alt="">
-                <h3>Lorem & Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+                <img class="skill-img computer-img" src="./assets/computer.png" alt="">
+                <div class="skill-info">
+                    <h3>Lorem & Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+                </div>
             </div>
             <div class="skill-row">
-                <img class="" src="./assets/chillies.png" alt="">
-                <h3>Lorem Ipsum Dolor</h3>
-                <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+                <img class="skill-img chilli-img" src="./assets/chillies.png" alt="">
+                <div class="skill-info">
+                    <h3>Lorem Ipsum Dolor</h3>
+                    <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+                </div>
             </div>
         </div>
         <hr>
