designs font and color of portfolio  as per end result

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -57,7 +57,7 @@
         <a class="footer-link" href="https://www.linkedin.com/in/ashutosh-ojha-082b86157/">LinkedIn</a>
         <a class="footer-link" href="https://github.com/leoAshu">GitHub</a>
         <a class="footer-link" href="https://www.ashutoshojha.ml/">Shoppe</a>
-        <p>© 2023 Ashutosh Ojha.</p>
+        <p class="copyright">© 2023 Ashutosh Ojha.</p>
     </div>
       
 </body>
