--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -23,7 +23,7 @@
         <div class="profile">
             <img class = "profile-img" src="./assets/ashutosh.png" alt="profile-img">
             <h2>Hello.</h2>
-            <p>I am currently a student at San Jose State University pursuing MS in Software Engineering.</p>
+            <p class="intro">I am a graduate student in the Software Engineering MS program at San Jose State University.</p>
         </div>
         <hr>
         <div class="skills">
@@ -47,7 +47,7 @@
         <div class="contact-me">
             <h2>Get In Touch</h2>
             <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-            <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+            <p class="contact-message">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
             <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
         </div>
     </div>
