--- a/modules/front-end/bootstrap/bootstrap-grid/index.html
+++ b/modules/front-end/bootstrap/bootstrap-grid/index.html
@@ -47,6 +47,28 @@
             col-lg-3 col-md-4 col-sm-6
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-lg-2 col-md-3" style="background-color: brown; border: 1px solid;">
+            col-lg-2 col-md-3
+        </div>
+        <div class="col-lg-2 col-md-3" style="background-color: brown; border: 1px solid;">
+            col-lg-2 col-md-3
+        </div>
+        <div class="col-lg-2 col-md-3" style="background-color: brown; border: 1px solid;">
+            col-lg-2 col-md-3
+        </div>
+        <div class="col-lg-2 col-md-3" style="background-color: brown; border: 1px solid;">
+            col-lg-2 col-md-3
+        </div>
+        <div class="col-lg-2 col-md-3" style="background-color: brown; border: 1px solid;">
+            col-lg-2 col-md-3
+        </div>
+        <div class="col-lg-2 col-md-3" style="background-color: brown; border: 1px solid;">
+            col-lg-2 col-md-3
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
