--- a/modules/front-end/bootstrap/bootstrap-grid/index.html
+++ b/modules/front-end/bootstrap/bootstrap-grid/index.html
@@ -49,22 +49,22 @@
     </div>
 
     <div class="row">
-        <div class="col-lg-2 col-md-3" style="background-color: brown; border: 1px solid;">
+        <div class="col-lg-2 col-md-3" style="background-color: grey; border: 1px solid;">
             col-lg-2 col-md-3
         </div>
-        <div class="col-lg-2 col-md-3" style="background-color: brown; border: 1px solid;">
+        <div class="col-lg-2 col-md-3" style="background-color: grey; border: 1px solid;">
             col-lg-2 col-md-3
         </div>
-        <div class="col-lg-2 col-md-3" style="background-color: brown; border: 1px solid;">
+        <div class="col-lg-2 col-md-3" style="background-color: grey; border: 1px solid;">
             col-lg-2 col-md-3
         </div>
-        <div class="col-lg-2 col-md-3" style="background-color: brown; border: 1px solid;">
+        <div class="col-lg-2 col-md-3" style="background-color: grey; border: 1px solid;">
             col-lg-2 col-md-3
         </div>
-        <div class="col-lg-2 col-md-3" style="background-color: brown; border: 1px solid;">
+        <div class="col-lg-2 col-md-3" style="background-color: grey; border: 1px solid;">
             col-lg-2 col-md-3
         </div>
-        <div class="col-lg-2 col-md-3" style="background-color: brown; border: 1px solid;">
+        <div class="col-lg-2 col-md-3" style="background-color: grey; border: 1px solid;">
             col-lg-2 col-md-3
         </div>
     </div>
