--- a/projects/tindog/index.html
+++ b/projects/tindog/index.html
@@ -56,8 +56,8 @@
 
         <div class="col-lg-6">
           <h1>Meet new and interesting dogs nearby.</h1>
-          <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i> Download</button>
-          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
+          <button class="download-button btn btn-dark btn-lg" type="button"><i class="fa-brands fa-apple"></i> Download</button>
+          <button class="download-button btn btn-outline-light btn-lg" type="button"><i class="fa-brands fa-google-play"></i> Download</button>
         </div>
 
         <div class="title-image-container col-lg-6">
@@ -212,9 +212,11 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 style="font-size: 2.5rem; font-weight: 900;">Find the True Love of Your Dog's Life Today.</h3>
+    <button class="download-button btn btn-dark btn-lg" type="button"><i class="fa-brands fa-apple"></i> Download</button>
+    <button class="download-button btn btn-light btn-lg" type="button"><i class="fa-brands fa-google-play"></i> Download</button>
+    <!-- <button class="btn btn-lg btn-dark" type="button">Download</button>
+    <button class="btn btn-lg btn-light" type="button">Download</button> -->
 
   </section>
 
@@ -222,6 +224,10 @@
   <!-- Footer -->
 
   <footer id="footer">
+    <i class="footer-icon fa-brands fa-twitter"></i>
+    <i class="footer-icon fa-brands fa-facebook-f"></i>
+    <i class="footer-icon fa-brands fa-instagram"></i>
+    <i class="footer-icon fa-solid fa-envelope"></i>
 
     <p>© Copyright TinDog</p>
 
