refactors solution for design cta and footer section challenge of tindog

--- a/projects/tindog/index.html
+++ b/projects/tindog/index.html
@@ -212,11 +212,9 @@
 
   <section id="cta">
 
-    <h3 style="font-size: 2.5rem; font-weight: 900;">Find the True Love of Your Dog's Life Today.</h3>
+    <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
     <button class="download-button btn btn-dark btn-lg" type="button"><i class="fa-brands fa-apple"></i> Download</button>
     <button class="download-button btn btn-light btn-lg" type="button"><i class="fa-brands fa-google-play"></i> Download</button>
-    <!-- <button class="btn btn-lg btn-dark" type="button">Download</button>
-    <button class="btn btn-lg btn-light" type="button">Download</button> -->
 
   </section>
 
@@ -224,10 +222,11 @@
   <!-- Footer -->
 
   <footer id="footer">
-    <i class="footer-icon fa-brands fa-twitter"></i>
-    <i class="footer-icon fa-brands fa-facebook-f"></i>
-    <i class="footer-icon fa-brands fa-instagram"></i>
-    <i class="footer-icon fa-solid fa-envelope"></i>
+    
+    <i class="social-icon fa-brands fa-twitter"></i>
+    <i class="social-icon fa-brands fa-facebook-f"></i>
+    <i class="social-icon fa-brands fa-instagram"></i>
+    <i class="social-icon fa-solid fa-envelope"></i>
 
     <p>© Copyright TinDog</p>
 
