adds sample script for js prompts

--- a/modules/front-end/javascript/index.html
+++ b/modules/front-end/javascript/index.html
@@ -5,6 +5,8 @@
     <title>JavaScript Playground</title>
 </head>
 <body>
-    <script src="./scripts/alerts.js"></script>
+    <p id="result">Result: </p>
+    <!-- <script src="./scripts/alerts.js"></script> -->
+    <script src="./scripts/prompts.js"></script>
 </body>
 </html>
