--- a/modules/front-end/javascript/index.html
+++ b/modules/front-end/javascript/index.html
@@ -5,7 +5,7 @@
     <title>JavaScript Playground</title>
 </head>
 <body>
-    <p id="result">Result: </p>
+    <!-- <p id="result">Result: </p> -->
     <!-- <script src="./scripts/alerts.js"></script> -->
     <script src="./scripts/prompts.js"></script>
 </body>
