adds sample script for js string length property

--- a/modules/front-end/javascript/index.html
+++ b/modules/front-end/javascript/index.html
@@ -7,6 +7,7 @@
 <body>
     <!-- <p id="result">Result: </p> -->
     <!-- <script src="./scripts/alerts.js"></script> -->
-    <script src="./scripts/prompts.js"></script>
+    <!-- <script src="./scripts/prompts.js"></script> -->
+    <script src="./scripts/string-length.js"></script>
 </body>
 </html>
