renames string length script to tweet limit in js module

--- a/modules/front-end/javascript/index.html
+++ b/modules/front-end/javascript/index.html
@@ -8,6 +8,6 @@
     <!-- <p id="result">Result: </p> -->
     <!-- <script src="./scripts/alerts.js"></script> -->
     <!-- <script src="./scripts/prompts.js"></script> -->
-    <script src="./scripts/string-length.js"></script>
+    <script src="./scripts/tweet-limit.js"></script>
 </body>
 </html>
