adds script for dog age in human years challenge in js module

--- a/modules/front-end/javascript/index.html
+++ b/modules/front-end/javascript/index.html
@@ -8,6 +8,7 @@
     <!-- <p id="result">Result: </p> -->
     <!-- <script src="./scripts/alerts.js"></script> -->
     <!-- <script src="./scripts/prompts.js"></script> -->
-    <script src="./scripts/tweet-limit.js"></script>
+    <!-- <script src="./scripts/tweet-limit.js"></script> -->
+    <script src="./scripts/dog-age.js"></script>
 </body>
 </html>
