--- a/projects/dice/index.html
+++ b/projects/dice/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
 </head>
-<body onload="roll();">
+<body>
     <div class="container">
         <h1>Refresh Me</h1>
 
