--- a/modules/back-end/express-js/calculator/index.html
+++ b/modules/back-end/express-js/calculator/index.html
@@ -5,9 +5,9 @@
     <title>Calculator</title>
 </head>
 <body>
-    <form action="./index.html" method="post">
-        <input type="text" name="num1" placeholder="First Number">
-        <input type="text" name="num2" placeholder="Second Number">
+    <form action="/" method="post">
+        <input type="number" name="num1" placeholder="First Number" required>
+        <input type="number" name="num2" placeholder="Second Number" required>
         <button type="submit" name="submit">Calculate</button>
     </form>
 </body>
