newsletter signup project: adds a try again button on failure page and a post handler to redirect to signup page

--- a/projects/newsletter-signup/failure.html
+++ b/projects/newsletter-signup/failure.html
@@ -11,9 +11,12 @@
     <body>
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-              <h1 class="display-4">Uh oh!</h1>
-              <p class="lead">There was a problem signing you up. Please try again later!</p>
+                <h1 class="display-4">Uh oh!</h1>
+                <p class="lead">There was a problem signing you up. Please try again later!</p>
+                <form action="/failure" method="post">
+                    <button class="btn btn-lg btn-warning" type="submit">Try Again</button>
+                </form>
             </div>
-          </div>
+        </div>
     </body>
 </html>
