--- a/modules/front-end/react/react-components/public/index.html
+++ b/modules/front-end/react/react-components/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>JSX</title>
+    <title>React Components</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
 
