--- a/modules/front-end/react/react-hooks/public/index.html
+++ b/modules/front-end/react/react-hooks/public/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
   <head>
     <title>React App</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel='stylesheet' href='styles.css' />
   </head>
 
   <body>
-    <div id="root"></div>
-    <script src="../src/index.js" type="text/jsx"></script>
+    <div id='root'></div>
+    <script src='../src/index.js' type='text/jsx'></script>
   </body>
 </html>
